# domain-validator

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
src/domain_validator/: __init__.py  domain_validator.py
tests/: domain_test.py
