[project]
name = "domain-validator"
version = "0.1.0-alpha"
description = "In Development - Please come back later."
authors = [
    {name = "Stacy Noland",email = "46572585+stacynoland@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "domain_validator", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
